    - Slightly lowered the profile growth of the coil heater.
    - Buffed MK1 selenium battery equipment to 150MJ from 75MJ.
    - Changed evaporator 2's to be unlocked in R-NM science, instead of P-TM. This was to give R-NM more rewards and to look more appealling when deciding which path to go down.
    - Updated the mixing plant graphics.

  Fixes:
    - Updated the advanced mining drill 1 technology icon.
    - Fixed the mixing plant icons being identical.

---------------------------------------------------------------------------------------------------
Version: 0.7.008
Date: 2025-25-11
  The 0.8 soon!! maybe!! we'll see! Update:

  Fixes:
    - Fixed Enable all feature flags belt stacking and xorimuths belt stacking mod stacking (get it) in PM, to give you 7 levels of belt stacking.
    - Fixed heat pipes not being upgrade plannerable.
    - Fixed stainless steel chests having the wrong icon scaling.
    - Fixed stainless steel chests not having circuit connecter graphics.

  Changes:
    - Removed reactor cooling from PM, from whence it probably wont return. This will not affect your reactors, apart from removing the fuel cells inside of them.

---------------------------------------------------------------------------------------------------
Version: 0.7.007
Date: 2025-22-11
  The god forbid a man(?) want to work on 0.8 Update:

  Fixes:
    - Fixed stainless steel tanks not merging in the factoriopedia.
    - Fixed stainless steel tanks lowering the pipeline extent unintentionally.
    - Fixed crystallizers not connecting to the circuit network.
    - Fixed the stainless steel pump not having visible circuit connections.
    - Fixed stainless steel tanks taking 11 framing.
    - Fixed oil reforming recipes not appearing in the signal GUI. no im not fixing any other of these until i get an easy explanation for how these things work :sob:

---------------------------------------------------------------------------------------------------
Version: 0.7.006