@@ -49,6 +49,7 @@ Date: 2025-28-09
     - Buffed MK1 selenium battery equipment to 150MJ from 75MJ.
     - Changed evaporator 2's to be unlocked in R-NM science, instead of P-TM. This was to give R-NM more rewards and to look more appealling when deciding which path to go down.
     - Updated the mixing plant graphics.
+    - Made all input fluidboxes on assembling machine 2 and above passthrough.
 
   Fixes:
     - Updated the advanced mining drill 1 technology icon.
